# cart-pole-inference

./: .gitignore  Cargo.toml  README.md  TODO.md  docker-compose.yml
config/: default.toml
load/: main.rs
monitor/grafana/provisioning/dashboards/: web_app_metrics.json
src/: lib.rs  main.rs
src/app/: config.rs  env.rs  handlers.rs  mod.rs  state.rs  subscriber.rs
src/data/: action.rs  mod.rs  observation.rs
tests/: health.rs  metrics.rs  predict.rs
tests/fixtures/: mod.rs
