[package]
name = "rl-proto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "load"
path = "load/main.rs"

[dependencies]
tch = "0.10.0"
actix-web = "4.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
goose = "0.17.0"
tokio = "1.25.0"
actix-web-prom = "0.6.0"
config = "0.13.3"
lazy_static = "1.4.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter", "ansi"] }
tracing-bunyan-formatter = "0.3.6"
tracing-actix-web = "0.7.2"

[dev-dependencies]
torch-sys = "0.10.0"
quickcheck = "1"
reqwest = "0.11.14"
